# CS2952Y_Final

./: .gitignore  CMakeLists.txt  INSTRUCTIONS.md  README.md
Resources/Metrics/: metrics.json
Resources/Shaders/: phong_frag.glsl
Samples/: Backflip_collider.fbx
src/: Core.cpp  Core.h  Debug.h  UI.cpp  UI.h  Util.h  Window.cpp  Window.h
src/python/: coacd_preprocess.py
src/render/: Camera.cpp  Graphics.cpp  Graphics.h  Mesh.cpp  Mesh.h  SkeletalMesh.cpp  SkeletalMesh.h  Texture.h  Transform.cpp  Transform.h
src/render/shapes/: mesh.h
